fix lint issues
Signed-off-by: adisos <adisos@il.ibm.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -119,6 +119,10 @@ linters:
     - whitespace
  
 issues:
+  exclude-dirs:
+    - pkg/nsx
+  exclude-files:
+    - pkg/model/dfw_old.go
   exclude-rules:
     - path: _test\.go
       linters:
