remove unused files, update gitignore
Signed-off-by: adisos <adisos@il.ibm.com>

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,9 @@ schemas/*.json
 pkg/collector/out/*
 cmd/examples/output/*
 
+# For temporary examples and pkgs
+examples/
+pkg/nsx
+pkg/model/*_old.go
+
+
