--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -23,6 +23,6 @@ jobs:
     - name: Build
       run: make build
 
-    #- name: Test
-    #  run: make test // run unit tests locally only for now 
+    - name: Test
+      run: make test
 
