--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,7 @@ bin/
 schemas/*.json
 
 # For tests output
-pkg/collector/out/*
-pkg/vsphrcoll/out/*
+pkg/*/out/*
 cmd/examples/output/*
 
 # For temporary examples and pkgs
