--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ schemas/*.json
 
 # For tests output
 pkg/*/out/*
+pkg/*/*/actual_output/*
 cmd/examples/output/*
 
 # For temporary examples and pkgs
