--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwarts_false_0/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwarts_false_0/policies.yaml
@@ -501,3 +501,17 @@ spec:
               operator: Exists
     policyTypes:
         - Ingress
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+    annotations:
+        description: Default Deny Network Policy
+        nsx-id: noNsxID
+    creationTimestamp: null
+    name: defaultDeny
+spec:
+    podSelector: {}
+    policyTypes:
+        - Ingress
+        - Egress
