--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprAndConds_false_0/pods.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprAndConds_false_0/pods.yaml
@@ -4,6 +4,8 @@ metadata:
     creationTimestamp: null
     labels:
         group__Slytherin-orOrAnd-no-DB: "true"
+        tag__Slytherin: "true"
+        tag__Web: "true"
     name: Slytherin-Web
 spec:
     containers: null
@@ -15,6 +17,8 @@ metadata:
     creationTimestamp: null
     labels:
         group__Slytherin-orOrAnd-no-DB: "true"
+        tag__App: "true"
+        tag__Slytherin: "true"
     name: Slytherin-App
 spec:
     containers: null
@@ -26,6 +30,8 @@ metadata:
     creationTimestamp: null
     labels:
         group__Hufflepuff-orOrAnd-no-DB: "true"
+        tag__Hufflepuff: "true"
+        tag__Web: "true"
     name: Hufflepuff-Web
 spec:
     containers: null
@@ -37,6 +43,8 @@ metadata:
     creationTimestamp: null
     labels:
         group__Hufflepuff-orOrAnd-no-DB: "true"
+        tag__App: "true"
+        tag__Hufflepuff: "true"
     name: Hufflepuff-App
 spec:
     containers: null
@@ -48,6 +56,8 @@ metadata:
     creationTimestamp: null
     labels:
         group__Gryffindor-orOrAnd-no-DB: "true"
+        tag__Gryffindor: "true"
+        tag__Web: "true"
     name: Gryffindor-Web
 spec:
     containers: null
@@ -59,6 +69,8 @@ metadata:
     creationTimestamp: null
     labels:
         group__Gryffindor-orOrAnd-no-DB: "true"
+        tag__App: "true"
+        tag__Gryffindor: "true"
     name: Gryffindor-App
 spec:
     containers: null
