--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprOrConds_false_0/pods.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprOrConds_false_0/pods.yaml
@@ -4,6 +4,8 @@ metadata:
     creationTimestamp: null
     labels:
         group__Slytherin-orOrAnd-no-DB: "true"
+        tag__DB: "true"
+        tag__Slytherin: "true"
     name: Slytherin-DB
 spec:
     containers: null
@@ -17,6 +19,8 @@ metadata:
         group__Gryffindor-orOrAnd-no-DB: "true"
         group__Hufflepuff-orOrAnd-no-DB: "true"
         group__Slytherin-orOrAnd-no-DB: "true"
+        tag__Slytherin: "true"
+        tag__Web: "true"
     name: Slytherin-Web
 spec:
     containers: null
@@ -30,6 +34,8 @@ metadata:
         group__Gryffindor-orOrAnd-no-DB: "true"
         group__Hufflepuff-orOrAnd-no-DB: "true"
         group__Slytherin-orOrAnd-no-DB: "true"
+        tag__App: "true"
+        tag__Slytherin: "true"
     name: Slytherin-App
 spec:
     containers: null
@@ -42,6 +48,8 @@ metadata:
     labels:
         group__Gryffindor-orOrAnd-no-DB: "true"
         group__Hufflepuff-orOrAnd-no-DB: "true"
+        tag__DB: "true"
+        tag__Hufflepuff: "true"
     name: Hufflepuff-DB
 spec:
     containers: null
@@ -54,6 +62,8 @@ metadata:
     labels:
         group__Hufflepuff-orOrAnd-no-DB: "true"
         group__Slytherin-orOrAnd-no-DB: "true"
+        tag__Hufflepuff: "true"
+        tag__Web: "true"
     name: Hufflepuff-Web
 spec:
     containers: null
@@ -66,6 +76,8 @@ metadata:
     labels:
         group__Hufflepuff-orOrAnd-no-DB: "true"
         group__Slytherin-orOrAnd-no-DB: "true"
+        tag__App: "true"
+        tag__Hufflepuff: "true"
     name: Hufflepuff-App
 spec:
     containers: null
@@ -77,6 +89,8 @@ metadata:
     creationTimestamp: null
     labels:
         group__Gryffindor-orOrAnd-no-DB: "true"
+        tag__DB: "true"
+        tag__Gryffindor: "true"
     name: Gryffindor-DB
 spec:
     containers: null
@@ -90,6 +104,8 @@ metadata:
         group__Gryffindor-orOrAnd-no-DB: "true"
         group__Hufflepuff-orOrAnd-no-DB: "true"
         group__Slytherin-orOrAnd-no-DB: "true"
+        tag__Gryffindor: "true"
+        tag__Web: "true"
     name: Gryffindor-Web
 spec:
     containers: null
@@ -103,6 +119,8 @@ metadata:
         group__Gryffindor-orOrAnd-no-DB: "true"
         group__Hufflepuff-orOrAnd-no-DB: "true"
         group__Slytherin-orOrAnd-no-DB: "true"
+        tag__App: "true"
+        tag__Gryffindor: "true"
     name: Gryffindor-App
 spec:
     containers: null
