--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprTwoScopes_false_0/pods.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprTwoScopes_false_0/pods.yaml
@@ -5,6 +5,8 @@ metadata:
     labels:
         group__DB: "true"
         group__Slytherin: "true"
+        tag__DB: "true"
+        tag__Slytherin: "true"
     name: Slytherin-DB
 spec:
     containers: null
@@ -17,6 +19,8 @@ metadata:
     labels:
         group__Slytherin: "true"
         group__Web: "true"
+        tag__Slytherin: "true"
+        tag__Web: "true"
     name: Slytherin-Web
 spec:
     containers: null
@@ -29,6 +33,8 @@ metadata:
     labels:
         group__App: "true"
         group__Slytherin: "true"
+        tag__App: "true"
+        tag__Slytherin: "true"
     name: Slytherin-App
 spec:
     containers: null
@@ -41,6 +47,8 @@ metadata:
     labels:
         group__DB: "true"
         group__Hufflepuff: "true"
+        tag__DB: "true"
+        tag__Hufflepuff: "true"
     name: Hufflepuff-DB
 spec:
     containers: null
@@ -53,6 +61,8 @@ metadata:
     labels:
         group__Hufflepuff: "true"
         group__Web: "true"
+        tag__Hufflepuff: "true"
+        tag__Web: "true"
     name: Hufflepuff-Web
 spec:
     containers: null
@@ -65,6 +75,8 @@ metadata:
     labels:
         group__App: "true"
         group__Hufflepuff: "true"
+        tag__App: "true"
+        tag__Hufflepuff: "true"
     name: Hufflepuff-App
 spec:
     containers: null
@@ -77,6 +89,8 @@ metadata:
     labels:
         group__DB: "true"
         group__Gryffindor: "true"
+        tag__DB: "true"
+        tag__Gryffindor: "true"
     name: Gryffindor-DB
 spec:
     containers: null
@@ -89,6 +103,8 @@ metadata:
     labels:
         group__Gryffindor: "true"
         group__Web: "true"
+        tag__Gryffindor: "true"
+        tag__Web: "true"
     name: Gryffindor-Web
 spec:
     containers: null
@@ -101,6 +117,8 @@ metadata:
     labels:
         group__App: "true"
         group__Gryffindor: "true"
+        tag__App: "true"
+        tag__Gryffindor: "true"
     name: Gryffindor-App
 spec:
     containers: null
